fix : mapping 수정

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -319,7 +319,7 @@
                     card.style.height = '200px';
 
                     // Generate the profile URL using the URL pattern
-                    const profileUrl = urlPattern.replace('{id}', item.name); // Replace `{id}` with `nickname`
+                    const profileUrl = urlPattern.replace('{id}', item.username); // Replace `{id}` with `nickname`
 
                     // Create the anchor element wrapping the card content
                     const link = document.createElement('a');
