feat : 아이템 확인 콘솔로그 추가 - 테스트

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -337,6 +337,7 @@
                         const height = 1000;
                         const left = (screen.width - width) / 2;
                         const top = (screen.height - height) / 2;
+                        console.log("받아오는 아이템 확인 : ", item);
                         window.open(profileUrl, '_blank', `width=${width},height=${height},top=${top},left=${left}`);
                     });
                     // Append the link to the card
